[package]
name = "adv-game"
version = "0.1.0"
authors = ["echnobas <60543166+echnobas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prompt-rs = { git = "https://github.com/echnobas/prompt-rs" }
